# Steam-Deck-RA-Core-Updater

./: README.md  pyproject.toml
src/: __init__.py  main.py
src/core/: detector.py  updater.py  version_fetcher.py
src/ui/: main_window.py  progress_dialog.py
src/utils/: helpers.py
