[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retroarch-core-updater"
version = "1.0.0"
description = "Modern GUI application for updating RetroArch cores on Steam Deck"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Steam Deck Community"},
]
keywords = ["retroarch", "steam-deck", "emulation", "cores", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: System :: Emulators",
    "Environment :: X11 Applications :: Qt",
]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/steamdeck-community/retroarch-core-updater"
Repository = "https://github.com/steamdeck-community/retroarch-core-updater"
Issues = "https://github.com/steamdeck-community/retroarch-core-updater/issues"
Documentation = "https://github.com/steamdeck-community/retroarch-core-updater/wiki"

[project.gui-scripts]
retroarch-core-updater = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true